SERVER-66744 Renaming view in a sharded cluster must return same errors of plain replica set