jstests/sharding/rename.js
@@ -49,16 +49,32 @@ assert.commandWorked(
 assert.eq(0, db.unsharded.countDocuments({}));
 assert.eq(1, s.getDB('otherDBSamePrimary').foo.countDocuments({}));
 
+const testDB = s.rs0.getPrimary().getDB('test');
+const fcvDoc = testDB.adminCommand({getParameter: 1, featureCompatibilityVersion: 1});
 jsTest.log("Testing that rename operations involving views are not allowed");
 {
     assert.commandWorked(db.collForView.insert({_id: 1}));
     assert.commandWorked(db.createView('view', 'collForView', []));
 
     let toAView = db.unsharded.renameCollection('view', true /* dropTarget */);
-    assert.commandFailed(toAView);
+
+    assert.commandFailedWithCode(
+        toAView,
+        [
+            ErrorCodes.NamespaceExists,
+            ErrorCodes.CommandNotSupportedOnView,  // TODO SERVER-68084 remove this error code
+            ErrorCodes.NamespaceNotFound           // TODO SERVER-68084 remove this error code
+        ],
+        "renameCollection should fail with NamespaceExists when the target is view");
 
     let fromAView = db.view.renameCollection('target');
-    assert.commandFailed(fromAView);
+    assert.commandFailedWithCode(
+        fromAView,
+        [
+            ErrorCodes.CommandNotSupportedOnView,
+            ErrorCodes.NamespaceNotFound  // TODO SERVER-68084 remove this error code
+        ],
+        "renameCollection should fail with CommandNotSupportedOnView when renaming a view");
 }
 
 // Rename a collection to itself fails, without loosing data
@@ -73,8 +89,6 @@ jsTest.log("Testing that rename operations involving views are not allowed");
     assert.eq(1, sameColl.countDocuments({}), "Rename a collection to itself must not loose data");
 }
 
-const testDB = s.rs0.getPrimary().getDB('test');
-const fcvDoc = testDB.adminCommand({getParameter: 1, featureCompatibilityVersion: 1});
 if (MongoRunner.compareBinVersions(fcvDoc.featureCompatibilityVersion.version, '6.1') >= 0) {
     // Create collection on non-primary shard (shard1 for test db) to simulate wrong creation via
     // direct connection: collection rename should fail since `badcollection` uuids are inconsistent
