jstests/sharding/timeseries_sharding_admin_commands.js
@@ -290,7 +290,8 @@ function assertRangeMatch(savedRange, paramRange) {
     assert.commandFailedWithCode(
         mongo.s.adminCommand({renameCollection: viewNss, to: newViewNss}), [
             ErrorCodes.IllegalOperation,
-            ErrorCodes.NamespaceNotFound /* TODO SERVER-67929 Remove this error code */
+            ErrorCodes.CommandNotSupportedOnView, /* TODO SERVER-67929 Remove this error code */
+            ErrorCodes.NamespaceNotFound,         /* TODO SERVER-67929 Remove this error code */
         ]);
     dropTimeSeriesColl();
 })();
